PROJECT (cityhash C)
CMAKE_MINIMUM_REQUIRED (VERSION 3.0.0)

MESSAGE (STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
OPTION (BUILD_TESTS "Build test programs" OFF)

SET (CMAKE_C_STANDARD 99)
ADD_COMPILE_OPTIONS (-Wall -Werror)

SET (SRC_CITYHASH cityhash.c)
SET (HDR_CITYHASH cityhash.h)
ADD_LIBRARY (cityhash STATIC ${SRC_CITYHASH})
INSTALL (TARGETS cityhash DESTINATION lib)
INSTALL (FILES ${HDR_CITYHASH} DESTINATION include)
SET_TARGET_PROPERTIES (cityhash PROPERTIES
	VERSION 1.1.1
	COMPILE_FLAGS "-fPIC"
)

# tests
IF (BUILD_TESTS)
	ENABLE_TESTING ()

	ADD_EXECUTABLE (run_tests cityhash-test.c)
	TARGET_INCLUDE_DIRECTORIES (run_tests PRIVATE ${PROJECT_SOURCE_DIR})
	TARGET_LINK_LIBRARIES (run_tests PRIVATE
		cityhash
	)
	TARGET_COMPILE_DEFINITIONS (run_tests PRIVATE UNIT_TESTING=1)
	ADD_TEST (NAME Tests COMMAND run_tests)
ENDIF (BUILD_TESTS)
